tests/snapshots/messages__type10_utc_date_inquiry.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,:1mg=5CcNJ;4,0*04\")"
---
UtcDateInquiry(
    UtcDateInquiry {
        message_type: 10,
        repeat_indicator: 0,
        mmsi: 123456789,
        dest_mmsi: 987654321,
    },
)
