tests/snapshots/messages__type12_plain_text.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,<1mg=5CcNJ;4@<51C5PB5@?BDPD?P:?2?EB7PDB16693P381>>5<Pik,0*4D\")"
---
AddressedSafetyMessage(
    AddressedSafetyMessage {
        message_type: 12,
        repeat_indicator: 0,
        mmsi: 123456789,
        seqno: 0,
        dest_mmsi: 987654321,
        retransmit: false,
        text: PLEASE REPORT TO JOBOURG TRAFFIC CHANNEL 13,
    },
)
