tests/snapshots/messages__type12_retransmitted.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,<1b4N?IawHI:31ED9?>PB5CDB93D54P1B51,0*59\")"
---
AddressedSafetyMessage(
    AddressedSafetyMessage {
        message_type: 12,
        repeat_indicator: 0,
        mmsi: 111222333,
        seqno: 2,
        dest_mmsi: 444555666,
        retransmit: true,
        text: CAUTION RESTRICTED AREA,
    },
)
